--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body> 
     <h1>i can push to github</h1>
+
     <h2>mama I can code now</h2> 
-    <h3>New code changed</h3>
+    <h3>New code changed</h3> 
+     
+    <p style="color:rgb(146, 146, 91) ;">Well. Ahamdilliah by the grace of almighty Allah i am doing well in <span style="border-radius:50px; margin: 0%;height: 30px;width:600;">programing hero web development course.</span></p>
 </body>
 </html>
